优化 AddonManager (#143)